## Process this file with automake to produce Makefile.in


datadir = $(prefix)/dx/samples/dxlink

data_DATA =  CensusData150.rgb CensusData150.size Imide_potential150.rgb \
	Imide_potential150.size Makefile_alphax Makefile_aviion Makefile_hp700 \
	Makefile_ibm6000 Makefile_intelnt Makefile_linux Makefile_macos Makefile_sgi \
	Makefile_solaris Makefile_sun4 README Sealevel150.rgb Sealevel150.size \
	cappediso150.rgb cappediso150.size demoapp.c maptoplane.c maptoplane.cfg \
	maptoplane.net netlist sealevel.c sealevel.cfg sealevel.net xapp.c \
	xapp_supervise.c dxlink_make

EXTRA_DIST = $(data_DATA)
