## Process this file with automake to produce Makefile.in
 
javasampdir = $(prefix)/dx/java/htmlpages
javasamp_DATA = $(WEB_FILES)
EXTRA_DIST = $(WEB_FILES)
 
SUBDIRS = userdata usermacros nets makes @MAKE_JAVADX_SAMPLES@

 
WEB_FILES = \
AutoInsurance.html \
AutoInsurance1.0.0.gif \
AutoInsurance2.0.0.gif \
AutoInsurance3.0.0.gif \
CCNet2.html \
CCNet23.0.0.gif \
CCNet24.0.0.gif \
CCNet25.0.0.gif \
Demo4.gif \
GroceryList.html \
GroceryList2.0.0.gif \
GroceryList3.0.0.gif \
GroceryList4.0.0.gif \
GroceryList4.0.1.gif \
GroceryList4.0.2.gif \
GroceryList4.0.3.gif \
GroceryList4.0.4.gif \
GroceryList4.0.5.gif \
GroceryList4.0.6.gif \
GroceryList4.0.7.gif \
GroceryList4.0.8.gif \
HomeOwn.html \
HomeOwn1.0.0.gif \
HomeOwn2.0.0.gif \
HomeOwn3.0.0.gif \
HomeOwn4.0.0.gif \
HomeOwn4.0.1.gif \
HomeOwn4.0.2.gif \
HomeOwn4.0.3.gif \
HomeOwn4.0.4.gif \
HomeOwn4.0.5.gif \
HomeOwn4.0.6.gif \
HomeOwn4.0.7.gif \
HomeOwn4.0.8.gif \
javadx-badge.gif \
javadx-hd.gif \
javadx-smhd.gif \
MRI_2.html \
MRI_21.0.0.gif \
MRI_22.0.0.gif \
MRI_22.0.1.gif \
MRI_22.0.2.gif \
MRI_22.0.3.gif \
MRI_22.0.4.gif \
MRI_22.0.5.gif \
MRI_22.0.6.gif \
MRI_22.0.7.gif \
MRI_22.0.8.gif \
Makefile.am \
Makefile.in \
Makefile.sample \
MutualFund.html \
MutualFund10.0.0.gif \
MutualFund2.0.0.gif \
MutualFund3.0.0.gif \
Navigation.html \
Navigation1.0.0.gif \
Navigation6.0.0.gif \
Navigation7.0.0.gif \
ScatterData.html \
ScatterData3.0.0.gif \
ScatterData4.0.0.gif \
ScatterData4.0.1.gif \
ScatterData4.0.2.gif \
ScatterData4.0.3.gif \
ScatterData4.0.4.gif \
ScatterData4.0.5.gif \
ScatterData4.0.6.gif \
ScatterData4.0.7.gif \
ScatterData4.0.8.gif \
Status.htm \
Status.html \
Streamline.html \
Streamline2.0.0.gif \
Streamline3.0.0.gif \
Streamline3.0.1.gif \
Streamline3.0.2.gif \
Streamline3.0.3.gif \
Streamline3.0.4.gif \
Streamline3.0.5.gif \
Streamline3.0.6.gif \
Streamline3.0.7.gif \
Streamline3.0.8.gif \
Streamline7.0.0.gif \
ThunderGlyphSheet.htm \
ThunderGlyphSheet.html \
ThunderGlyphSheet2.0.0.wrl \
ThunderGlyphSheet3.0.0.gif \
Topo.gif \
Topo.html \
Topo2.0.0.gif \
Topo3.0.0.gif \
Topo3.0.1.gif \
Topo3.0.2.gif \
Topo3.0.3.gif \
Topo3.0.4.gif \
Topo3.0.5.gif \
Topo3.0.6.gif \
Topo3.0.7.gif \
Topo3.0.8.gif \
Topo4.0.0.gif \
activex.htm \
ddi.html \
ddi5.0.0.gif \
ddi7.0.0.gif \
ddi8.0.0.gif \
earlier.htm \
gordon.html \
gordon1.0.0.gif \
gordon2.0.0.gif \
hedge.html \
hedge3.0.0.gif \
ibmqw.html \
ibmqw1.0.0.gif \
ibmqw2.0.0.gif \
npvcall.html \
npvcall3.0.0.gif \
optval.html \
optval1.0.0.gif \
pagea.gif \
pagea2.gif \
pagea3.gif \
perp1.0.0.gif \
perp1.0.1.gif \
perp1.0.2.gif \
perp1.0.3.gif \
perp1.0.4.gif \
perp1.0.5.gif \
perp1.0.6.gif \
perp1.0.7.gif \
perp1.0.8.gif \
toc.htm \
wacc.html \
wacc1.0.0.gif
