## Process this file with automake to produce Makefile.in


datadir = $(prefix)/dx/samples/macros

data_DATA =  ArrangeMemberMacro.net AutoScaleMacro.net BandColorsMacro.net BarChartMacro.net CappedIsoMacro.net ClipSurfaceMacro.net ClipVolumeMacro.net ConvertColorNameListMacro.net DrapeMacro.net ExportVRML.net FactorialMacro.net FormatListMacro.net GetCategoricalLabelsMacro.net GetEventsMacro.net Image2Macro.net InsetImageMacro.net InterpolateCameraMacro.net InterpolatePositionsMacro.net KeyFrameCameraMacro.net MOS_statesMacro.net Make3DFieldMacro.net MakeLineMacro.net MapOnStatesMacro.net MatteMacro.net PickPlotMacro.net UnsquishGlyphMacro.net WindBarbsMacro.net
EXTRA_DIST = $(data_DATA)
