## Process this file with automake to produce Makefile.in


datadir = $(prefix)/dx/samples/outboard

data_DATA =  Makefile_alphax Makefile_aviion Makefile_hp700 Makefile_ibm6000 Makefile_ibmpvs Makefile_intelnt Makefile_linux Makefile_os2 Makefile_sgi Makefile_solaris Makefile_sun4 README async.c async.mdf dummy.c hello.c hello.mdf makedata my_simulation.c socket.c watchfile.c watchfile.mdf watchsocket.c watchsocket.cfg watchsocket.mdf watchsocket.net
EXTRA_DIST = $(data_DATA)
