## Process this file with automake to produce Makefile.in


SUBDIRS =  2D_DATA 3D_DATA ANNOTATION CATEGORICAL COLORMAP_EDITOR \
    COMPUTE DATA_DRIVEN_INTERACTORS DEBUGGING DISTRIBUTED_PROCESSING \
    IMAGE_PROCESSING IMPORTING INTERFACE_CONTROL LOOPING MISC PLOTTING \
    PROBES RENDERING SCATTERED SEQUENCER SIMPLE SUPERVISE

datadir = $(prefix)/dx/samples/programs

data_DATA =  $(DATA1) $(DATA2)

DATA1 = Accumulate.cfg Accumulate.net AlternateVisualizations.cfg \
    AlternateVisualizations.net AnnotationGlyphs.cfg AnnotationGlyphs.net \
    Arrange.cfg Arrange.net AutoAxes.cfg AutoAxes.net AutoAxesSpecifyTicks.cfg \
    AutoAxesSpecifyTicks.net AutoColor.cfg AutoColor.net AutoGlyph.cfg \
    AutoGlyph.net AutoGrid.cfg AutoGrid.net Band.cfg Band.net BandedColors.cfg \
    BandedColors.net Bounce.cfg Bounce.net CappedIso.cfg CappedIso.net \
    Caption.cfg Caption.net Categorical.cfg Categorical.net CensusData.cfg \
    CensusData.net Color.cfg Color.net ColorBar.cfg ColorBar.net Compute2.cfg \
    Compute2.net ComputeMultiLine.cfg ComputeMultiLine.net ComputeOnData.cfg \
    ComputeOnData.net Connect.cfg Connect.net ConnectingScatteredPoints.cfg \
    ConnectingScatteredPoints.net Construct.cfg Construct.net \
    ContoursAndCaption.cfg ContoursAndCaption.net DataDrivenInteractors.cfg \
    DataDrivenInteractors.net DataDrivenSelector.cfg DataDrivenSelector.net \
    Describe.cfg Describe.net DialogStyle.cfg DialogStyle.net Distributed.cfg \
    Distributed.net Duplicates.cfg Duplicates.net ExamplePieChart.cfg \
    ExamplePieChart.net ExampleSMP.cfg ExampleSMP.net ExpandedFonts.cfg \
    ExpandedFonts.net FFT.cfg FFT.net FaceNormals.cfg FaceNormals.net \
    Factorial.cfg Factorial.net FatLines.cfg FatLines.net FlyThrough.cfg \
    FlyThrough.net FlyThrough2.cfg FlyThrough2.net FontLayouts.cfg \
    FontLayouts.net FontPreview.cfg FontPreview.net GeneralImport1.cfg \
    GeneralImport1.net GeneralImport2.cfg GeneralImport2.net GetSet.cfg \
    GetSet.net Gradient.cfg Gradient.net Grid.cfg Grid.net GroceryList.cfg \
    GroceryList.net Histogram.cfg Histogram.net HomeOwn.cfg HomeOwn.net \
    ImageTool.cfg ImageTool.net Image_wo_UI.cfg Image_wo_UI.net \
    Imide_potential.cfg Imide_potential.net ImportExternalFilter.cfg \
    ImportExternalFilter.net Include.cfg Include.net IndependentlyArrange.cfg \
    IndependentlyArrange.net InsetImage.cfg InsetImage.net InsetImageSimple.cfg \
    InsetImageSimple.net InterfaceControl1.cfg InterfaceControl1.net \
    InterfaceControl2.cfg InterfaceControl2.net InterfaceControl3.cfg \
    InterfaceControl3.net Interop.cfg Interop.net InvalidData.cfg InvalidData.net \
    Isolate.cfg Isolate.net Isosurface.cfg Isosurface.net Legend.cfg \
    Legend.net Light.cfg Light.net LightingColorSelector.cfg \
    LightingColorSelector.net MRI_1.cfg MRI_1.net MRI_2.cfg MRI_2.net \
    Majority.cfg Majority.net ManipulateGroups.cfg ManipulateGroups.net \
    Map.cfg Map.net MapToPlane.cfg MapToPlane.net MappedIso.cfg MappedIso.net \
    MarkUnmark.cfg MarkUnmark.net MovingCamera.cfg MovingCamera.net \
    MovingSheet.cfg MovingSheet.net MultipleDataSets.cfg MultipleDataSets.net

DATA2 = PickPlot.cfg PickPlot.net PickStreamline.cfg PickStreamline.net \
    PlotColumn.cfg PlotColumn.net \
    PlotGroupOfLines.cfg PlotGroupOfLines.net PlotLine.cfg PlotLine.net \
    PlotLine2.cfg PlotLine2.net PlotSpecifyTicks.cfg PlotSpecifyTicks.net \
    PlotTwoLines.cfg PlotTwoLines.net Post.cfg Post.net \
    ProbeText.cfg ProbeText.net QuantizeImage.cfg QuantizeImage.net \
    README Reduce.cfg Reduce.net Refine.cfg Refine.net Regrid.cfg \
    Regrid.net Route.cfg Route.net RubberTube.cfg RubberTube.net \
    Rubbersheet.cfg Rubbersheet.net SalesOnStates.cfg SalesOnStates.net \
    ScaleScreen.cfg ScaleScreen.net ScalingAxes.cfg ScalingAxes.net \
    ScatterData.cfg ScatterData.net Sealevel.cfg Sealevel.net \
    SharedCamera.cfg SharedCamera.net ShowBoundary.cfg ShowBoundary.net \
    ShowFonts.cfg ShowFonts.net SimpleGetSetLoop.cfg SimpleGetSetLoop.net \
    SimplifySurface.cfg SimplifySurface.net Slab.cfg Slab.net \
    Sort.cfg Sort.net SpecialCharacters.cfg SpecialCharacters.net \
    StandardColormaps.cfg StandardColormaps.net Streamline.cfg Streamline.net \
    Supervise.cfg Supervise.net SupervisePicking.cfg SupervisePicking.net \
    Switch.cfg Switch.net TextureMapOpenGL.cfg TextureMapOpenGL.net \
    ThunderGlyphSheet.cfg ThunderGlyphSheet.net ThunderStreamlines.cfg \
    ThunderStreamlines.net Thunder_cellcentered.cfg Thunder_cellcentered.net \
    Topo.cfg Topo.net UsingAttributes.cfg UsingAttributes.net UsingBarChart.cfg \
    UsingBarChart.net UsingClipPlane.cfg UsingClipPlane.net UsingColormaps.cfg \
    UsingColormaps.net UsingDrape.cfg UsingDrape.net UsingEqualize.cfg \
    UsingEqualize.net UsingFilter.cfg UsingFilter.net UsingGlyphs.cfg \
    UsingGlyphs.net UsingIsosurface.cfg UsingIsosurface.net \
    UsingKeyFrameCamera.cfg UsingKeyFrameCamera.net UsingLights.cfg \
    UsingLights.net UsingMap.cfg UsingMap.net UsingMessage.cfg UsingMessage.net \
    UsingMorph.cfg UsingMorph.net UsingMultiGrids.cfg UsingMultiGrids.net \
    UsingOverlay.cfg UsingOverlay.net UsingParse.cfg UsingParse.net \
    UsingProbes.cfg UsingProbes.net UsingShade.cfg UsingShade.net \
    UsingStreakline.cfg UsingStreakline.net UsingSwitchAndRoute.cfg \
    UsingSwitchAndRoute.net UsingTextAndTextGlyphs.cfg UsingTextAndTextGlyphs.net \
    Verify.cfg Verify.net VisualObject.cfg VisualObject.net VolumeClip.cfg \
    VolumeClip.net VolumeRendering.cfg VolumeRendering.net \
    VolumeRenderingSimple.cfg VolumeRenderingSimple.net WarpingPositions.cfg \
    WarpingPositions.net WindBarbs.cfg WindBarbs.net WindVorticity.cfg \
    WindVorticity.net ZipCodes.cfg ZipCodes.net
EXTRA_DIST = $(data_DATA)

install-data-hook:
	@list='$(SUBDIRS)'; \
	for s in $$list ; do \
		cd $$s ; \
		$(MAKE) $(AM_MAKEFLAGS) myinstall ; \
		cd .. ; \
	done

