## Process this file with automake to produce Makefile.in


datadir = $(prefix)/dx/samples/scripts

data_DATA =  AmbientLight Append Arrange Attribute AutoAxes AutoCamera AutoColor \
	AutoGlyph AutoGrayScale Band Camera Caption ClipBox ClipPlane Collect \
	CollectMultiGrid CollectNamed CollectSeries Color ColorBar Compute Compute2 \
	Connect Construct Convert Direction Display DivCurl Echo Enumerate Equalize \
	Export Extract FaceNormals Filter Format GetSet Glyph Gradient Grid Histogram \
	Include Inquire Isosurface KeyIn Light List Map MapToPlane Mark Measure Morph \
	Normals Options Overlay Partition Plot Post Print ReadImage README Reduce \
	Refine Regrid Remove Rename Render Replace Ribbon Rotate Route RubberSheet \
	Sample Scale Select Sequencer Shade ShowBoundary ShowBox ShowConnections \
	ShowPositions Slab Slice Sort Stack Statistics Streakline Streamline \
	Supervise Switch System Text Transform Translate Transpose Tube Unmark Usage \
	Verify WriteImage interop scriptexample
EXTRA_DIST = $(data_DATA)
