## Process this file with automake to produce Makefile.in


datadir = $(prefix)/dx/samples/user

data_DATA =  Makefile_inboard_alphax Makefile_inboard_aviion Makefile_inboard_hp700 Makefile_inboard_ibm6000 Makefile_inboard_ibmpvs Makefile_inboard_intelnt Makefile_inboard_sgi Makefile_inboard_solaris Makefile_inboard_sun4 Makefile_intelnt Makefile_loadable_alphax Makefile_loadable_hp700 Makefile_loadable_ibm6000 Makefile_loadable_intelnt Makefile_loadable_sgi Makefile_loadable_solaris Makefile_os2 Makefile_outboard_alphax Makefile_outboard_aviion Makefile_outboard_hp700 Makefile_outboard_ibm6000 Makefile_outboard_ibmpvs Makefile_outboard_intelnt Makefile_outboard_sgi Makefile_outboard_solaris Makefile_outboard_sun4 README add.c hello.c hello_loadable.mdf makex.c user_inboard.mdf user_loadable.mdf user_outboard.mdf
EXTRA_DIST = $(data_DATA)
