## process with automake to make Makefile.in

EXTRA_DIST= AutoInsurance.make CCNet2.make GroceryList.make HomeOwn.make MRI_2.make \
	MutualFund.make Navigation.make ScatterData.make Streamline.make ThunderGlyphSheet.make \
	Topo.make ddi.make gordon.make hedge.make ibmqw.make npvcall.make optval.make wacc.make

