javadatadir = $(prefix)/dx/java/server/userdata
DATA_FILES = AutoInsurance.txt CCAll.dx Makefile.am Norm.dx apt.txt arf.txt asr.txt enhigh.cxn enhigh.txt enlow.cxn enlow.txt ibm94.txt ibm95.txt ibm96.txt mf1.txt npvcall.cm npvcall2.cm option.cm
javadata_DATA = $(DATA_FILES)
EXTRA_DIST = $(DATA_FILES)
